[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/coins/image 4.png" type="Texture" id=1]
[ext_resource path="res://assets/coins/image 3.png" type="Texture" id=2]
[ext_resource path="res://assets/coins/image 1.png" type="Texture" id=3]
[ext_resource path="res://assets/coins/image 6.png" type="Texture" id=4]
[ext_resource path="res://assets/coins/image 2.png" type="Texture" id=5]
[ext_resource path="res://assets/coins/image 5.png" type="Texture" id=6]
[ext_resource path="res://assets/coins/image 15.png" type="Texture" id=7]
[ext_resource path="res://assets/coins/image 16.png" type="Texture" id=8]
[ext_resource path="res://assets/coins/image 14.png" type="Texture" id=9]
[ext_resource path="res://assets/coins/image 12.png" type="Texture" id=10]
[ext_resource path="res://assets/coins/image 13.png" type="Texture" id=11]
[ext_resource path="res://assets/coins/image 11.png" type="Texture" id=12]
[ext_resource path="res://assets/coins/image 9.png" type="Texture" id=13]
[ext_resource path="res://assets/coins/image 10.png" type="Texture" id=14]
[ext_resource path="res://assets/coins/image 7.png" type="Texture" id=15]
[ext_resource path="res://assets/coins/image 8.png" type="Texture" id=16]
[ext_resource path="res://scripts/coin.gd" type="Script" id=17]
[ext_resource path="res://assets/Audio/Coin_collect.wav" type="AudioStream" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "go",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 57.6945, 65.9821 )

[sub_resource type="Animation" id=3]
resource_name = "bye"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="coin" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "go"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bye = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -30.0
[connection signal="body_entered" from="." to="." method="_on_coin_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
